added soba and korean

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ img {
 <li><a href="http://barneygreengrass.com/">Barney Greengrass</a>: Bagels and Lox</li>
 <li><a href="https://noodlebar-ny.momofuku.com/">Momofuku Noodle Bar</a>: Celebrity Chefs… Why not.</li>
 <li><a href="http://www.piera.com/">Pier A Harbor House</a>: My office mate’s brothers favorite spot.</li>
+<li><a href="http://www.cdgnyc.com/">Cho Dong Gol</a>: Korean</li>
+<li><a href="http://www.restaurantnippon.com/">Soba Nippon</a>:Soba!</li>
 </ol>
 </div>
 
