--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ img {
 <li><a href="http://www.radegasthall.com/">Radegast Hall and Biergarten</a>: Beer, Sausage, Brookly. Day drinking?!</li>
 <li><a href="http://www.cannibalnyc.com/">The Cannibal</a>: Beer and Butcher</li>
 <li><a href="http://www.yelp.com/biz/redds-brooklyn">Redd’s</a>: Darts in Williamsburg</li>
+<li><a href="http://jimmysno43.com/">Jimmys No. 43</a>: German/Belgian selection. In East village.</li>
 </ol>
 </div>
 <div id="sites" class="section level1">
